addet a school link

--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
 <h1>Hello World!!!! I'm Nia</h1>
 <p>This is my first program</p>
 <a href="https://www.w3schools.com/html/default.asp">w3 school</a>
+<a href="https://www.zg.ch/behoerden/gemeinden/hunenberg/de/schulen">Ehret</a>
 
 </body>
 </html>
