--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Page Title</title>
+<link rel="stylesheet" href="styles.css" />
+<script type="text/javascript" src="script.js" > </script>
 </head>
 <body>
 
@@ -15,5 +17,9 @@
         <a href="https://www.zg.ch/behoerden/gemeinden/hunenberg/de/schulen">Ehret</a>
     </li>
 </ul>
+<button onclick="calculateName()">
+	What's my name?
+</button>
+<p id="result"></p>
 </body>
 </html>
