--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Nia's Hello World</title>
 <link rel="stylesheet" href="styles.css" />
 <script type="text/javascript" src="script.js" > </script>
 </head>
